# wasmer-pack

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  release.toml  rust-toolchain.toml  wapm.toml
crates/cli/: Cargo.toml
crates/cli/src/: codegen.rs  lib.rs  main.rs  pirita.rs  show.rs  utils.rs
crates/cli/tests/: known_packages.rs  smoke-test.rs
crates/cli/tests/snapshots/: known_packages__load_a_package_from_a_tarball.snap  known_packages__wabt.snap  known_packages__wai_tutorial_01.snap  known_packages__wasmer_pack_cli.snap  known_packages__wasmer_pack_tarball.snap  known_packages__wit_pack.snap  known_packages__wit_pack_cli.snap  smoke_test__wit_pack.snap  smoke_test__wit_pack_cli.snap
crates/testing/: Cargo.toml
crates/testing/src/: autodiscover.rs  errors.rs  javascript.rs  lib.rs  python.rs  utils.rs
crates/wasm/: Cargo.toml  exports.wit  index.test.ts  package.json  pyproject.toml  test_wasmer_pack.py  wasmer-pack.exports.wai  wit-pack.exports.wit
crates/wasm/snapshots/JavaScript/: all files.snap  package__src__bindings__index.d.ts.snap  package__src__bindings__index.js.snap  package__src__bindings__wasmer-pack__intrinsics.js.snap  package__src__bindings__wasmer-pack__wasmer-pack.d.ts.snap  package__src__bindings__wasmer-pack__wasmer-pack.js.snap  package__src__index.d.ts.snap  package__src__index.js.snap
crates/wasm/snapshots/Python/: MANIFEST.in.snap  all files.snap  pyproject.toml.snap  wasmer_pack____init__.py.snap  wasmer_pack__bindings____init__.py.snap  wasmer_pack__bindings__wasmer_pack____init__.py.snap  wasmer_pack__bindings__wasmer_pack__bindings.py.snap  wasmer_pack__py.typed.snap
crates/wasm/src/: lib.rs
crates/wasmer-pack/: Cargo.toml  release.toml
crates/wasmer-pack/src/: files.rs  lib.rs  macros.rs  pirita.rs  types.rs  versions.rs  wai_version.txt
crates/wasmer-pack/src/js/: bindings.index.d.ts.j2  bindings.index.js.j2  command.d.ts.j2  command.js.j2  mod.rs  top-level.index.d.ts.j2  top-level.index.js.j2
crates/wasmer-pack/src/py/: MANIFEST.in.j2  bindings.__init__.py.j2  commands.__init__.py.j2  mod.rs
crates/wasmer-pack/tests/: integration_tests.rs
crates/wasmer-pack/tests/js/: index.test.ts  package.json  tsconfig.json
crates/wasmer-pack/tests/js-wasi/: index.test.ts  jasmine.json  package.json
crates/wasmer-pack/tests/python/: Pipfile  test_wasmer_pack.py
crates/wasmer-pack/tests/python-wasi/: Pipfile  pyproject.toml  test_wabt.py
crates/wasmer-pack/tests/wabt/: libwabt.wasm  wast2json
crates/wit-pack/: Cargo.toml  release.toml
crates/wit-pack/src/: bindings.rs  files.rs  interface.rs  lib.rs  metadata.rs  module.rs  types.rs  wit_version.rs
crates/wit-pack/src/js/: bindings.index.d.ts.j2  bindings.index.js.j2  bindings.js.j2  command.d.ts.j2  command.js.j2  index.d.ts.j2  index.js.j2  library.index.d.ts.j2  library.index.js.j2  mod.rs  top-level.index.d.ts.j2  top-level.index.js.j2
crates/wit-pack/src/py/: MANIFEST.in.j2  __init__.py.j2  bindings.__init__.py.j2  commands.__init__.py.j2  library.__init__.py.j2  mod.rs  top_level.__init__.py.j2
crates/wit-pack/tests/: index.js  integration_tests.rs  main.py  package.json
crates/wit-pack/tests/fixtures/: mod.rs
crates/wit-pack/tests/js/: index.js  index.test.ts  index.ts  package.json  tsconfig.json
crates/wit-pack/tests/js-wasi/: index.test.ts  index.ts  jasmine.json  package.json  tsconfig.json
crates/wit-pack/tests/python/: Pipfile  main.py  pyproject.toml  requirements.txt  test_wit_pack.py
crates/wit-pack/tests/python-wasi/: Pipfile  main.py  pyproject.toml  requirements.txt  test_wabt.py
crates/wit-pack/tests/wabt/: libwabt.wasm  wabt2.exports.wit  wasm-interp  wasm-strip  wasm-validate  wasm2wat  wast2json  wat2wasm
crates/xtask/: Cargo.toml
crates/xtask/graphql/: change_generator.graphql  get_package_version.graphql  schema.graphql
crates/xtask/src/: main.rs  schema.rs  set_generator.rs
examples/calc/: Cargo.toml  pyproject.toml  test_calc.py
examples/calc/snapshots/Python/: MANIFEST.in.snap  all files.snap  calc____init__.py.snap  calc__bindings____init__.py.snap  calc__bindings__calc____init__.py.snap  calc__bindings__calc__bindings.py.snap  calc__py.typed.snap  pyproject.toml.snap
examples/calc/src/: lib.rs
examples/hello-wasi/: Cargo.toml  hello-wasi.export.wai  hello-wasi.test.js  hello-wasi.test.mjs  jest.config.js  package.json  pyproject.toml  test.py  test_hello_wasi.py
examples/hello-wasi/snapshots/JavaScript/: all files.snap  package__node_modules__@wasmer__wasi__dist__Library.cjs.js.snap  package__node_modules__@wasmer__wasi__dist__Library.cjs.min.js.snap  package__node_modules__@wasmer__wasi__dist__Library.esm.js.snap  package__node_modules__@wasmer__wasi__dist__Library.esm.min.js.snap  package__node_modules__@wasmer__wasi__dist__Library.umd.js.snap  package__node_modules__@wasmer__wasi__dist__Library.umd.min.js.snap  package__node_modules__@wasmer__wasi__jest.config.js.snap  package__node_modules__@wasmer__wasi__tests__index.spec.js.snap  package__src__bindings__hello-wasi__hello-wasi.d.ts.snap  package__src__bindings__hello-wasi__hello-wasi.js.snap  package__src__bindings__hello-wasi__intrinsics.js.snap  package__src__bindings__index.d.ts.snap  package__src__bindings__index.js.snap  package__src__index.d.ts.snap  package__src__index.js.snap
examples/hello-wasi/snapshots/Python/: MANIFEST.in.snap  all files.snap  hello_wasi____init__.py.snap  hello_wasi__bindings____init__.py.snap  hello_wasi__bindings__hello_wasi____init__.py.snap  hello_wasi__bindings__hello_wasi__bindings.py.snap  hello_wasi__py.typed.snap  pyproject.toml.snap
examples/hello-wasi/src/: lib.rs
examples/hello-wasi/tests/: hello-wasi-integration-tests.rs
examples/host-imports/: Cargo.toml  fs.import.wai  host-imports.export.wai  logging.import.wai  pyproject.toml  test_host_imports.py
examples/host-imports/src/: lib.rs
examples/host-imports/tests/: python.rs
examples/wasi-executable/: Cargo.toml
integration-tests/: Cargo.toml
integration-tests/src/: lib.rs
integration-tests/tests/: examples.rs
(+20659 files in other folders)
