[workspace]
members = ["crates/*", "examples/*"]

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-pack"
rust-version = "1.64.0"                                       # Required for [workspace.package]
version = "0.5.3"

[patch.crates-io]
wapm-targz-to-pirita = { git = "ssh://git@github.com/wasmerio/pirita", rev = "497f6db" }
webc = { git = "ssh://git@github.com/wasmerio/pirita", rev = "497f6db" }
