[workspace]
members = ["crates/*", "examples/*"]

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-pack"
rust-version = "1.67.0"                                       # Required for [workspace.package]
version = "0.7.0"

[workspace.dependencies]
anyhow = "1"
webc = "4.0.0"
wapm-targz-to-pirita = "0.3.1"
