[workspace]
members = ["crates/*", "examples/*"]

[workspace.package]
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
edition = "2021"
homepage = "https://wasmer.io/"
license = "MIT"
readme = "README.md"
repository = "https://github.com/wasmerio/wasmer-pack"
rust-version = "1.67.0"                                       # Required for [workspace.package]
version = "0.7.1"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
webc = "5.0.4"
wai-bindgen-rust = "0.2.3"
wapm-targz-to-pirita = "0.3.1"
