[package]
name = "integration-tests"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
wasmer-pack-testing = { version = "0.1.0", path = "../crates/testing" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
