[package]
name = "wit-pack-cli"
version = "0.3.0"
edition = "2021"
rust-version = "1.61.0" # Required by wit-pack
description = "A code generator that lets you treat WebAssembly modules like native dependencies."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wit-pack"
doc = false

[package.metadata.wapm]
namespace = "wasmer"
abi = "wasi"
[package.metadata.wapm.fs]
"." = "."

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
webc = { git = "ssh://git@github.com/wasmerio/pirita.git", version = "0.1.0" }
wit-pack = { version = "0.3.0-alpha", path = "../wit-pack" }

[dev-dependencies]
insta = "1.18.2"
tempfile = "3"
ureq = "2.5.0"
url = "2.3.1"
