[package]
name = "wasmer-pack-cli"
description = "A code generator that lets you treat WebAssembly modules like native dependencies."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wasmer-pack"
doc = false

[package.metadata.wapm]
namespace = "wasmer"
abi = "wasi"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
wapm-toml = "0.4.0"
wapm-targz-to-pirita = "0.1.6"
wasmer-pack = { version = "0.7.0", path = "../wasmer-pack" }
webc = "4.0.0"

[dev-dependencies]
assert_cmd = "2.0.6"
flate2 = "1.0.24"
insta = "1.18.2"
tar = "0.4.38"
tempfile = "3"
ureq = "2.5.0"
url = "2.3.1"
