[package]
name = "wasmer-pack-testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ignore = "0.4.18"
insta = { version = "1.23.0", features = ["filters"] }
tempfile = "3.3.0"
tracing = "0.1.37"
serde_json = "1.0.89"
serde = "1.0.149"
wasmer-pack-cli = { version = "0.5.3", path = "../cli" }
