[package]
name = "wasmer-pack-testing"
description = "Wasmer Pack Integration Testing Framework"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ignore = "0.4.18"
insta = { version = "1.23.0", features = ["filters"] }
tempfile = "3.3.0"
tracing = "0.1.37"
serde_json = "1.0.89"
serde = "1.0.149"
wasmer-pack-cli = { version = "0.6.0", path = "../cli" }

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
