[package]
name = "wit-pack-wasm"
description = "The WebAssembly interface to wit-pack."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.wapm]
package = "wit-pack"
namespace = "wasmer"
abi = "none"
bindings = { wit-exports = "wit-pack.exports.wit", wit-bindgen = "0.1.0" }

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
wit-bindgen-rust = { git = "https://github.com/wasmerio/wit-bindgen", version = "0.1.0" }
wit-pack = { version = "0.4.1", path = "../wit-pack" }
