[package]
name = "wasmer-pack-wasm"
description = "The WebAssembly interface to wasmer-pack."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.wapm]
package = "wasmer-pack"
namespace = "wasmer"
abi = "none"
bindings = { wit-exports = "wasmer-pack.exports.wit", wit-bindgen = "0.1.0" }

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
wai-bindgen-rust = "0.2.0-rc.1"
wasmer-pack = { version = "0.5.0", path = "../wasmer-pack" }
