[package]
name = "wasmer-pack-wasm"
description = "The WebAssembly interface to wasmer-pack."
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[package.metadata.wapm]
package = "wasmer-pack"
namespace = "wasmer"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "wasmer-pack.exports.wai" }

[lib]
crate-type = ["cdylib", "rlib"]

[[test]]
name = "wasmer-pack-wasm-integration-tests"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
getrandom = { version = "0.2.8", features = ["custom"] }
original = { package = "wasmer-pack", version = "0.7.0", path = "../wasmer-pack" }
wai-bindgen-rust = "0.2.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = { path = "../testing" }
