[package]
name = "wasmer-pack"
description = "A code generator that lets you treat WebAssembly modules like native dependencies."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
heck = "0.4.0"
minijinja = "0.23.0"
once_cell = "1.14.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5.9"
wai-bindgen-gen-core = "0.2.1"
wai-bindgen-gen-js = "0.2.1"
wai-bindgen-gen-wasmer-py = "0.2.1"
wai-parser = "0.2.1"

[dev-dependencies]
cargo_metadata = "0.15.0"
insta = { version = "1.18.2", features = ["filters"] }
pretty_assertions = "1.3.0"
