[package]
name = "wasmer-pack"
description = "A code generator that lets you treat WebAssembly modules like native dependencies."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
heck = "0.4.0"
minijinja = "0.34.0"
once_cell = "1.14.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.7"
wai-bindgen-gen-core = "0.2.1"
wai-bindgen-gen-js = "0.2.1"
wai-bindgen-gen-wasmer-py = "0.2.1"
wai-parser = "0.2.1"
wasmparser = "0.107.0"
webc = { workspace = true }

[dev-dependencies]
cargo_metadata = "0.15.0"
insta = { version = "1.18.2", features = ["filters"] }
pretty_assertions = "1.3.0"
