[package]
name = "wit-pack"
version = "0.1.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wit-pack"
edition = "2021"
license = "MIT"
rust-version = "1.59.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
heck = "0.4.0"
serde = "1.0.143"
serde_json = "1.0.83"
wit-bindgen-gen-core = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
wit-bindgen-gen-js = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
wit-parser = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }

[dev-dependencies]
cargo_metadata = "0.15.0"
insta = "1.18.2"
