[package]
name = "wit-pack"
version = "0.3.0"
authors = ["Wasmer Engineering Team <engineering@wasmer.io>"]
repository = "https://github.com/wasmerio/wit-pack"
edition = "2021"
license = "MIT"
rust-version = "1.59.0"
description = "A code generator that lets you treat WebAssembly modules like native dependencies."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.62"
heck = "0.4.0"
minijinja = "0.23.0"
once_cell = "1.14.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_json = "1.0.83"
toml = "0.5.9"
wit-bindgen-gen-core = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
wit-bindgen-gen-js = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
wit-bindgen-gen-wasmer-py = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }
wit-parser = { git = "https://github.com/wasmerio/wit-bindgen", branch = "wasmer", version = "0.1.0" }

[dev-dependencies]
cargo_metadata = "0.15.0"
insta = "1.18.2"
pretty_assertions = "1.3.0"
