[package]
name = "xtask"
version = "0.0.0"
publish = false
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
env_logger = "0.10"
graphql_client = "0.13"
log = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = "2.5.0"

[package.metadata.release]
release = false
