[package]
name = "calc"
description = "The simplest possible WebAssembly module"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.1"

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "calc.exports.wai" }

[lib]
crate-type = ["cdylib"]
