[package]
name = "calc"
description = "The simplest possible WebAssembly module"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "calc.exports.wai" }

[package.metadata.release]
release = false

[lib]
crate-type = ["cdylib"]

[[test]]
name = "calc-integration-tests"
harness = false

[dependencies]
wai-bindgen-rust = { workspace = true }

[dev-dependencies]
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = { path = "../../crates/testing" }
