[package]
name = "hello-wasi"
description = "The simplest possible WASI WebAssembly library."
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "wasi"
bindings = { wai-version = "0.2.0", exports = "hello-wasi.export.wai" }

[lib]
crate-type = ["cdylib"]

[[test]]
name = "hello-wasi-integration-tests"
harness = false

[dependencies]
wai-bindgen-rust = "0.2.1"

[dev-dependencies]
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = { path = "../../crates/testing" }
