[package]
name = "host-imports"
version = "0.0.0"
description = "A WebAssembly library that imports some functions from its host."
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "none"
[package.metadata.wapm.bindings]
wai-version = "0.2.0"
exports = "host-imports.export.wai"
imports = ["fs.import.wai", "logging.import.wai"]

[lib]
crate-type = ["cdylib"]

[[test]]
name = "host-import-tests"
harness = false

[dependencies]
wai-bindgen-rust = "0.2.1"

[dev-dependencies]
anyhow = "1.0.66"
tempfile = "3.3.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = { path = "../../crates/testing" }
