[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["Michael-F-Bryan <michael@wasmer.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
host-imports = {path = "/home/consulting/Documents/wasmer/wasmer-pack/examples/host-imports/generated_bindings/Python", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
