[package]
name = "wasi-executable"
version = "0.0.0"
description = "A basic WASI executable."
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wai-bindgen-rust = "0.2.1"

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "wasi"
