[package]
# Note: We use "_" instead of "-" to test https://github.com/wasmerio/wasmer-pack/issues/98
name = "wasi_executable"
version = "0.0.0"
description = "A basic WASI executable."
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.wapm]
namespace = "Michael-F-Bryan"
abi = "wasi"

[package.metadata.release]
release = false

[[test]]
name = "wasi-executable-integration-tests"
harness = false

[dependencies]
wai-bindgen-rust = { workspace = true }

[dev-dependencies]
anyhow = "1.0.66"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
wasmer-pack-testing = { path = "../../crates/testing" }
