[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-wasi"
version = "0.1.0"
description = ""
authors = ["Ayush Jha <ayush@wasmer.io>"]

[tool.poetry.dependencies]
python = "^3.8"
wabt = {path = "./../../../../target/tmp/wasmer-pack/python-wasi"}
pytest = "*"
wasmer = "*"
wasmer-compiler-cranelift = "*"
mypy = "*"
