[tool.poetry]
name = "python-wasi"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
wasmer = "1.1.0"
wasmer-compiler-cranelift = "1.1.0"
pytest = "7.2.0"
mypy = "0.982"
wabt = { path = "../../../../target/tmp/wit-pack/python-wasi/wabt" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
